src/styles/templates/_blogTemplate.scss
@import "../utils/vars";
@import "../utils/mixins";

$darkmode-default: #ffae00;
$darkmode-light: #ecb829;

.template-blog {
  &-container {
    max-width: 700px;
    margin: 0 auto;
    padding: 0em 0.7em;
    z-index: 1;
  }

  &__landing-container {
    height: 100vh;
    width: 100vw;
    position: relative;
  }

  &__feature-img {
    position: absolute !important;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 0;
    top: -75px;
    left: 0;
    filter: contrast(0.55) brightness(0.3);
  }

  &__shade-transition {
    position: absolute;
    bottom: 75px;
    height: 75px;
    width: 100%;
  }

  &__header {
    margin-top: -10em;
    z-index: 1;
    max-width: 750px;
  }

  &__title {
    font-size: 50px;
    text-align: center;
    color: $darkmode-default;
  }

  &__tag-divider {
    margin: 2em;

    &__divider {
      height: 2px;
      width: 30px;
      margin: 0 20px;
      background: $darkmode-default;
      opacity: 0.6;
    }

    &__tag {
      span {
        color: #3a3546;

        &::before {
          background: #3a3546;
        }
        cursor: pointer;
      }
    }
  }

  &__content-section {
    padding: 0 0 3em 0;
  }

  &__author-profile {
    position: absolute;
    bottom: 110px;
    right: 40px;

    &__author {
      color: $darkmode-default;
      margin-right: 10px;
    }
  }

  &__go-back {
    position: absolute;
    top: 20px;
    left: 30px;
    cursor: pointer;
    color: $darkmode-default;
    opacity: 0.8;

    &:hover {
      opacity: 1;
    }
  }

  &__subheader {
    &__date {
      &-container {
        margin: 0 15px 0 0;
      }
    }

    &__view-counter,
    &__date {
      &-icon {
        margin-right: 5px;
        color: $darkmode-light;
      }

      &-text {
        letter-spacing: 1px;
        font-size: 14px;
        color: $darkmode-light;
      }
    }
  }

  &__next-link {
    text-decoration-line: underline;
    text-align: center;
    margin: 30px 0;
  }

  &__previous-link {
    text-decoration-line: underline;
    margin: 15px 8px;
  }

  &__content-article {
    p {
      margin-bottom: 25px;
    }

    ul {
      margin: -10px 0 25px 0;
    }

    li {
      opacity: 0.9;
      margin: 0.5em 0;
    }

    h4 {
      margin-bottom: 30px;
      opacity: 0.9;
    }

    img {
      margin: 30px auto;
      height: 400px;
    }

    h2 {
      margin: 40px 0 15px 0;
      color: $color-neutral-600;
    }

    h3 {
      margin: 0 0 25px 0;
    }

    a {
      text-decoration-line: underline;
      color: $color-neutral-400;
      font-weight: bold;
    }
  }

  &__end-div {
    margin: 6em 0 5em 0;
  }

  &__related {
    padding: 1em 0 3em;

    & > h2 {
      margin-bottom: 2em;
    }
  }

  &__related__link-card-section {
    max-width: 900px;
  }

  &__related__card {
    margin: 2em;
    width: 350px;
    white-space: pre-wrap;
    position: relative;
    overflow: hidden;
    transition: 0.2s linear;
    &:hover {
      transform: scale(1.02);
    }

    img {
      top: 0;
      left: 0;
      position: absolute;
      width: 100%;
      height: 180px;
      cursor: initial;
    }
  }

  &__related__card-text {
    margin: 5% 0 0 0;
    h3:hover {
      text-decoration: underline;
    }
  }

  &__related__card__date-tag {
    margin: 10px 0 0;

    span {
      cursor: pointer;
      margin: 0 10px 0 0;
      height: max-content;
    }
  }
}

